; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/xfrm/extr_xfrm_state.c_xfrm_state_lookup.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/xfrm/extr_xfrm_state.c_xfrm_state_lookup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.xfrm_state = type { i32 }
%struct.net = type { i32 }

@xfrm_state_lock = common dso_local global i32 0, align 4
@DUMMY_MARK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.xfrm_state* @xfrm_state_lookup(%struct.net* %0, i32* %1, i32 %2, i32 %3, i16 zeroext %4) #0 {
  %6 = alloca %struct.net*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i16, align 2
  %11 = alloca %struct.xfrm_state*, align 8
  store %struct.net* %0, %struct.net** %6, align 8
  store i32* %1, i32** %7, align 8
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store i16 %4, i16* %10, align 2
  %12 = call i32 @spin_lock_bh(i32* @xfrm_state_lock)
  %13 = load %struct.net*, %struct.net** %6, align 8
  %14 = load i32, i32* @DUMMY_MARK, align 4
  %15 = load i32*, i32** %7, align 8
  %16 = load i32, i32* %8, align 4
  %17 = load i32, i32* %9, align 4
  %18 = load i16, i16* %10, align 2
  %19 = call %struct.xfrm_state* @__xfrm_state_lookup(%struct.net* %13, i32 %14, i32* %15, i32 %16, i32 %17, i16 zeroext %18)
  store %struct.xfrm_state* %19, %struct.xfrm_state** %11, align 8
  %20 = call i32 @spin_unlock_bh(i32* @xfrm_state_lock)
  %21 = load %struct.xfrm_state*, %struct.xfrm_state** %11, align 8
  ret %struct.xfrm_state* %21
}

declare dso_local i32 @spin_lock_bh(i32*) #1

declare dso_local %struct.xfrm_state* @__xfrm_state_lookup(%struct.net*, i32, i32*, i32, i32, i16 zeroext) #1

declare dso_local i32 @spin_unlock_bh(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
